         Reported by Henry Story.
       - Fixed bug causing premature closing of connections managed
         by the internal NIO/HTTP/SIP connector.
         Reported by Cyril Lakech.
       - The max IO idle time used in code was 60s instead of the
         30s announced in the Javadocs. Now using 30s.
       - Removed extra empty line in XML documents added by the
         XmlWriter class.
    - API changes
       - Added Authenticator#multiAuthenticating to better control
         optional authenticators and ensure we don't attempt 
         several authentications if not necessary.
       - Added ClientInfo#certificates and cipherSuite properties
         and deprecated related attributes.
       - Added shortcut ClientResource#addQueryParameter and
         addSegment methods, based on the "reference" property.
       - Added WadlApplication#canDescribe() method to facilitate
         customization.
       - Added lower-level RedableListener providing a ByteBuffer
         when new content is asynchronously provided.
       - Added TransformRepresentation#errorListener to be able to
         replace the default one. Suggested by Warren Janssens.
       - Attempting to create a Form instance from an EmptyRepres.
         doesn't throw an exception anymore, just a fine log trace.
         Reported by George Calm.
       - Added APPLICATION_XQUERY media type constant.
         Suggested by Alex Milowski.
       - Refactored internal DigestUtils to clearly separate HMac
         variants SHA-1 and SHA-256, in crypto extension.
       - Refactored internal AwsUtils to clearly separate HMac
         variants SHA-1 and SHA-256, in crypto extension.
       - Added Graph.add*() methods and Link constructors as syntaxic
         sugar in RDF extension.
       - Added Reference.encode(...) methods with a "queryString"
         boolean parameter to ensure that spaces are encoded as %20
         instead of '+'. Reported by Matt Stromske.