@@ -8,6 +8,7 @@ Export-Package: org.restlet.ext.jackson
 Import-Package: 
  org.codehaus.jackson,
  org.codehaus.jackson.annotate,
+ org.codehaus.jackson.format,
  org.codehaus.jackson.impl,
  org.codehaus.jackson.io,
  org.codehaus.jackson.map,
@@ -39,3 +40,4 @@ Import-Package:
  org.restlet.service,
  org.restlet.util
 Bundle-RequiredExecutionEnvironment: J2SE-1.5
+Require-Bundle: org.codehaus.jackson;bundle-version="1.8.0"
